Revert "fix: add z-index to mobile header to make hamburger menu clickable (by making it above the gradient)"
This reverts commit 8052cc04e11274cb21fbbe582c2617edefc01535.

--- a/src/components/header/mobileHeader.module.css
+++ b/src/components/header/mobileHeader.module.css
@@ -2,7 +2,6 @@
   margin-top: 1rem;
   margin-left: 0.75rem;
   position: absolute;
-  z-index: 10;
 
   /* Main and Sub Menus */
   > div {
